--- a/src/html/index.html
+++ b/src/html/index.html
@@ -25,16 +25,25 @@
     </div>
   </header>
   <main>
+    <section class="entity-banner-section">
+      <figure class="banner-figure">
+        <img class="banner-image" src="../static/statue-julius-caesar.jpg" alt="Estatua de Julio César en Roma">
+        <figcaption class="container banner-figcaption"><h1 class="banner-title">Conoce a Julio César, creador del Imperio Romano</h1></figcaption>
+      </figure>
+    </section>
+
     <section>
       <div class="container">
-        <h1>Portal bibliografico: Julio César</h1>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias rem accusantium odit accusamus? Officiis ipsam sunt reiciendis, nihil exercitationem culpa voluptatem distinctio blanditiis molestias repudiandae, voluptatum ducimus. Suscipit, sunt eum.</p>  
+        <h1>Portal biofráfico: Julio César</h1>
+        <p>Bienvenido al portal biográfico sobre Julio César, el primer emperador romano. Artificie de la caida de la república romana y auge de un imperio. En este lugar podras conocer
+          algunas de sus gestas más famosas y como vivio uno de los hombres más importantes del mundo antiguo.
+        </p>  
       </div>
     </section>
-    <section>
+    <section class="entity-card-section">
       <!--CARDS-->
-      <div class="container">
-        <div>
+      <div class="container dis-flex justify-space-around">
+        <div class="card">
           <div>
             <div>
               <h2>Categorias</h2>
@@ -44,7 +53,7 @@
             <a href="#"></a>
           </div>
         </div>
-        <div>
+        <div class="card">
           <div>
             <div>
               <h2>Presentación</h2>
@@ -54,7 +63,7 @@
             <a href="#"></a>
           </div>
         </div>
-        <div>
+        <div class="card">
           <div>
             <div>
               <h2>Categorias</h2>
