Solved flex layout for cards

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -26,15 +26,15 @@
   </header>
   <main>
     <section class="entity-banner-section">
-      <figure class="banner-figure">
-        <img class="banner-image" src="../static/statue-julius-caesar.jpg" alt="Estatua de Julio César en Roma">
-        <figcaption class="container banner-figcaption"><h1 class="banner-title">Conoce a Julio César, creador del Imperio Romano</h1></figcaption>
+      <figure>
+        <img src="../static/statue-julius-caesar.jpg" alt="Estatua de Julio César en Roma">
+        <figcaption class="container"><h1>Conoce a Julio César, creador del poderoso Imperio Romano</h1></figcaption>
       </figure>
     </section>
 
-    <section>
+    <section class="entity-index-presentation-section">
       <div class="container">
-        <h1>Portal biofráfico: Julio César</h1>
+        <h1>Portal biográfico: Julio César</h1>
         <p>Bienvenido al portal biográfico sobre Julio César, el primer emperador romano. Artificie de la caida de la república romana y auge de un imperio. En este lugar podras conocer
           algunas de sus gestas más famosas y como vivio uno de los hombres más importantes del mundo antiguo.
         </p>  
@@ -43,34 +43,34 @@
     <section class="entity-card-section">
       <!--CARDS-->
       <div class="container dis-flex justify-space-around">
-        <div class="card">
-          <div>
-            <div>
+        <div class="container-card">
+          <div class="card">
+            <!-- <div class="card__text"> -->
               <h2>Categorias</h2>
-              <p>jfgdjidfjhkdf</p>
-            </div>
+              <p>Descubre más sobre la vida y gestas de Julio César.</p>
+            <!-- </div> -->
             <img src="#" alt="Imagen categorias">
-            <a href="#"></a>
+            <a href="./categorias.html"></a>
           </div>
         </div>
-        <div class="card">
-          <div>
-            <div>
+        <div class="container-card">
+          <div class="card">
+            <!-- <div class="card__text"> -->
               <h2>Presentación</h2>
-              <p>jfgdjidfjhkdf</p>
-            </div>
+              <p>Conoce que hacemos y conoce quien fue Julio César.</p>
+            <!-- </div> -->
             <img src="#" alt="Imagen presentación">
-            <a href="#"></a>
+            <a href="./presentacion.html"></a>
           </div>
         </div>
-        <div class="card">
-          <div>
-            <div>
-              <h2>Categorias</h2>
-              <p>jfgdjidfjhkdf</p>
-            </div>
-            <img src="#" alt="Imagen categorias">
-            <a href="#"></a>
+        <div class="container-card">
+          <div class="card">
+            <!-- <div class="card__text"> -->
+              <h2>Enlaces</h2>
+              <p>¿Quieres saber más? Lee las fuentes en las que se basa nuestro trabajo.</p>
+            <!-- </div> -->
+            <img src="../static/roman-road.jpg" alt="Roman road">
+            <a href="./enlaces.html"></a>
           </div>
         </div>
       </div>
