Card overlay, final mini presentation text, cards semi finalized

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -35,41 +35,39 @@
     <section class="entity-index-presentation-section">
       <div class="container">
         <h1>Portal biográfico: Julio César</h1>
-        <p>Bienvenido al portal biográfico sobre Julio César, el primer emperador romano. Artificie de la caida de la república romana y auge de un imperio. En este lugar podras conocer
-          algunas de sus gestas más famosas y como vivio uno de los hombres más importantes del mundo antiguo.
-        </p>  
+        <p>Bienvenido al portal biográfico sobre Julio César (Gaius Julius Caesar) general y politico romano, además de ser consul y el primer dictador Romano vitalicio (dictator perpetuo). En este lugar podras conocer
+          algunas de sus gestas más famosas y como vivio uno de los hombres más importantes del mundo antiguo. Miembro del Primer Triumvirato, general de campañas militares
+          como la conquista de la Galia y la guerra civil romana que llevo a César a ser el artificie final de la muerte de la república romana y posterior auge de un imperio. 
+        </p> 
       </div>
     </section>
     <section class="entity-card-section">
       <!--CARDS-->
       <div class="container dis-flex justify-space-around">
         <div class="container-card">
-          <div class="card">
-            <!-- <div class="card__text"> -->
-              <h2>Categorias</h2>
-              <p>Descubre más sobre la vida y gestas de Julio César.</p>
-            <!-- </div> -->
-            <img src="#" alt="Imagen categorias">
+          <div class="card position-relative">
+            <div class="card__text">
+              <h2 class="card__title">Categorias</h2>
+              <p class="card__description">Descubre más sobre la vida y gestas de Julio César.</p>
+            </div>
             <a href="./categorias.html"></a>
           </div>
         </div>
         <div class="container-card">
-          <div class="card">
-            <!-- <div class="card__text"> -->
-              <h2>Presentación</h2>
-              <p>Conoce que hacemos y conoce quien fue Julio César.</p>
-            <!-- </div> -->
-            <img src="#" alt="Imagen presentación">
+          <div class="card position-relative">
+            <div class="card__text">
+              <h2 class="card__title">Presentación</h2>
+              <p class="card__description">Conoce que hacemos y conoce quien fue Julio César.</p>
+            </div>
             <a href="./presentacion.html"></a>
           </div>
         </div>
         <div class="container-card">
-          <div class="card">
-            <!-- <div class="card__text"> -->
-              <h2>Enlaces</h2>
-              <p>¿Quieres saber más? Lee las fuentes en las que se basa nuestro trabajo.</p>
-            <!-- </div> -->
-            <img src="../static/roman-road.jpg" alt="Roman road">
+          <div class="card position-relative">
+            <div class="card__text">
+              <h2 class="card__title">Enlaces</h2>
+              <p class="card__description">¿Quieres saber más? Lee las fuentes en las que se basa nuestro trabajo.</p>
+            </div>
             <a href="./enlaces.html"></a>
           </div>
         </div>
