--- a/src/html/index.html
+++ b/src/html/index.html
@@ -48,9 +48,9 @@
           <div class="card position-relative">
             <div class="card__text">
               <h2 class="card__title">Categorias</h2>
-              <p class="card__description">Descubre más sobre la vida y gestas de Julio César.</p>
+              <p class="card__description">Descubre más sobre la vida y gestas de uno de los hgombres más importantes de la antigua Roma, Julio César.</p>
             </div>
-            <a href="./categorias.html"></a>
+            <a href="./categorias.html">Ir a categorias</a>
           </div>
         </div>
         <div class="container-card">
@@ -59,7 +59,7 @@
               <h2 class="card__title">Presentación</h2>
               <p class="card__description">Conoce que hacemos y conoce quien fue Julio César.</p>
             </div>
-            <a href="./presentacion.html"></a>
+            <a href="./presentacion.html">Ir a presentación</a>
           </div>
         </div>
         <div class="container-card">
@@ -68,7 +68,7 @@
               <h2 class="card__title">Enlaces</h2>
               <p class="card__description">¿Quieres saber más? Lee las fuentes en las que se basa nuestro trabajo.</p>
             </div>
-            <a href="./enlaces.html"></a>
+            <a href="./enlaces.html">Ir a enlaces</a>
           </div>
         </div>
       </div>
