--- a/src/html/index.html
+++ b/src/html/index.html
@@ -50,7 +50,7 @@
               <h2 class="card__title">Categorias</h2>
               <p class="card__description">Descubre más sobre la vida y gestas de uno de los hgombres más importantes de la antigua Roma, Julio César.</p>
             </div>
-            <a href="./categorias.html">Ir a categorias</a>
+            <a class="right-card-button" href="./categorias.html"><span>Ir a categorias</span></a>
           </div>
         </div>
         <div class="container-card">
@@ -59,7 +59,7 @@
               <h2 class="card__title">Presentación</h2>
               <p class="card__description">Conoce que hacemos y conoce quien fue Julio César.</p>
             </div>
-            <a href="./presentacion.html">Ir a presentación</a>
+            <a class="right-card-button" href="./presentacion.html"><span>Ir a presentación</span></a>
           </div>
         </div>
         <div class="container-card">
@@ -68,7 +68,7 @@
               <h2 class="card__title">Enlaces</h2>
               <p class="card__description">¿Quieres saber más? Lee las fuentes en las que se basa nuestro trabajo.</p>
             </div>
-            <a href="./enlaces.html">Ir a enlaces</a>
+            <a class="right-card-button" href="./enlaces.html"><span>Ir a enlaces</span></a>
           </div>
         </div>
       </div>
