Fixes and concept for details and presentation

--- a/src/html/presentacion.html
+++ b/src/html/presentacion.html
@@ -25,10 +25,24 @@
     </div>
   </header>
   <main>
-    <section>
+    <section class="entity-presentation-section">
       <div class="container">
-        <h1>Portal bibliografico: Julio César</h1>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias rem accusantium odit accusamus? Officiis ipsam sunt reiciendis, nihil exercitationem culpa voluptatem distinctio blanditiis molestias repudiandae, voluptatum ducimus. Suscipit, sunt eum.</p>  
+        <h1>Sobre nosotros y Julio César</h1>
+        <div class="dis-flex justify-space-between">
+          <figure>
+            <img src="../static/julius-caesar.jpg" alt="Perfil de bronce de Julio César">
+            <figcaption><span>Estatua de bronce desgastado sobre Julio César.</span></figcaption>
+          </figure>
+          <div class="w-55">
+            <p>Bienvenido al portal biográfico sobre <strong>Julio César</strong>. En este lugar se explicaran detalles sobre la vida y los logros de posiblemente uno de los
+              más grandes hombres de la antiguedad. Todo el trabajo realizado en este portal ha sido extraido de fuentes externas y ha sido sintetizado de forma
+              que ayude al lector a conocer más sobre él.</p>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. In rerum officiis, architecto dolores adipisci sed quaerat quo nemo perspiciatis modi distinctio aspernatur veritatis qui quia quas dolor accusantium? Expedita, non?
+            </p>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt eveniet eos voluptatibus aperiam perspiciatis veritatis deleniti, fugit doloremque. Fugit aperiam vero eius non quia sit quas ad autem eum quo.</p>
+          </div>  
+        </div>
       </div>
     </section>
   </main>
