--- a/src/html/index.html
+++ b/src/html/index.html
@@ -28,7 +28,7 @@
     <section class="entity-banner-section">
       <figure>
         <img src="../static/statue-julius-caesar.jpg" alt="Estatua de Julio César en Roma">
-        <figcaption class="container"><h1>Conoce a Julio César, creador del poderoso Imperio Romano</h1></figcaption>
+        <figcaption class="container"><div><h1 class="container">Conoce a Julio César, creador del poderoso Imperio Romano</h1></figcaption>
       </figure>
     </section>
 
