--- a/src/html/index.html
+++ b/src/html/index.html
@@ -36,9 +36,10 @@
       <div class="container">
         <h1>Portal biográfico: Julio César</h1>
         <p>Bienvenido al portal biográfico sobre Julio César (Gaius Julius Caesar) general y politico romano, además de ser consul y el primer dictador Romano vitalicio (dictator perpetuo). En este lugar podras conocer
-          algunas de sus gestas más famosas y como vivio uno de los hombres más importantes del mundo antiguo. Miembro del Primer Triumvirato, general de campañas militares
-          como la conquista de la Galia y la guerra civil romana que llevo a César a ser el artificie final de la muerte de la república romana y posterior auge de un imperio. 
-        </p> 
+          algunas de sus gestas más famosas y como vivio uno de los hombres más importantes del mundo antiguo. Miembro del Primer <span id="dots"">...</span><span id="read-more"> Triumvirato, general de campañas militares
+          como la conquista de la Galia y la guerra civil romana que llevo a César a ser el artificie final de la muerte de la república romana y posterior auge de un imperio.</span> 
+        </p>
+        <button id="read-more-button">Leer más</button><i id="rm-icon" class="not-active"></i>
       </div>
     </section>
     <section class="entity-card-section">
