--- a/src/html/index.html
+++ b/src/html/index.html
@@ -13,10 +13,10 @@
   <header>
     <div class="container">
       <div>
-        <a href="#"><img src="#" alt="Logo"></a>
+        <a href="index.html"><img class="logo" src="../static/logo.svg" alt="Logo"></a>
       </div>
       <nav>
-        <ul>
+        <ul class="dis-flex">
           <li><a href="./categorias.html">Categorias</a></li>
           <li><a href="./presentacion.html">Presentación</a></li>
           <li><a href="./enlaces.html">Enlaces</a></li>
@@ -26,10 +26,23 @@
   </header>
   <main>
     <section class="entity-banner-section">
-      <figure>
-        <img src="../static/statue-julius-caesar.jpg" alt="Estatua de Julio César en Roma">
+      <section class="entity-banner-section">
+        <figure>
+          <img src="../static/statue-julius-caesar.jpg" alt="Estatua de Julio César en Roma">
+          <figcaption class="container"><div><h1 class="container">Conoce a Julio César, creador del poderoso Imperio Romano</h1></figcaption>
+        </figure>
+      </section>
+      <!-- <figure>
+        <div id="slider" class="keen-slider">
+          <div class="keen-slider__slide">
+            <img src="../static/statue-julius-caesar.jpg" alt="Estatua de Julio César en Roma">
+          </div>
+          <div class="keen-slider__slide">
+            <img src="../static/rome-colosseum.jpg" alt="Estatua de Julio César en Roma">
+          </div>
+        </div>
         <figcaption class="container"><div><h1 class="container">Conoce a Julio César, creador del poderoso Imperio Romano</h1></figcaption>
-      </figure>
+      </figure> -->
     </section>
 
     <section class="entity-index-presentation-section">
