--- a/src/html/categorias.html
+++ b/src/html/categorias.html
@@ -10,14 +10,14 @@
   <script type="module" src="../js/app.js"></script>
 </head>
 <body>
-  <header>
+  <header class="mb-50">
     <div class="container">
       <div>
-        <a href="#"><img src="#" alt="Logo"></a>
+        <a href="index.html"><img class="logo" src="../static/logo.svg" alt="Logo"></a>
       </div>
       <nav>
-        <ul>
-          <li><a href="./categorias.html">Categorias</a></li>
+        <ul class="dis-flex">
+          <li class="active">Categorias</li>
           <li><a href="./presentacion.html">Presentación</a></li>
           <li><a href="./enlaces.html">Enlaces</a></li>
         </ul>
