--- a/src/html/enlaces.html
+++ b/src/html/enlaces.html
@@ -27,8 +27,22 @@
   <main>
     <section>
       <div class="container">
-        <h1>Portal bibliografico: Julio César</h1>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias rem accusantium odit accusamus? Officiis ipsam sunt reiciendis, nihil exercitationem culpa voluptatem distinctio blanditiis molestias repudiandae, voluptatum ducimus. Suscipit, sunt eum.</p>  
+        <h1>Enlaces</h1>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias rem accusantium odit accusamus? Officiis ipsam sunt reiciendis, nihil exercitationem culpa voluptatem distinctio blanditiis molestias repudiandae, voluptatum ducimus. Suscipit, sunt eum.</p>
+        <div class="dis-flex justify-space-between">
+          <section class="entity-subsection">
+            <h2>Fuentes externas de información</h2>
+            <ul>
+              <li><span><a href="https://unsplash.com/photos/Y_v45vAfBEc">Estatua de Julio Caesar Augusto</a> por Nemanja Peric.</span></li>
+            </ul>
+          </section>
+          <section class="entity-subsection">
+            <h2>Directorio de imágenes</h2>
+            <ul>
+              <li><span><a href="https://unsplash.com/photos/Y_v45vAfBEc">Estatua de Julio Caesar Augusto</a> por Nemanja Peric.</span></li>
+            </ul>
+          </section>
+        </div>
       </div>
     </section>
   </main>
