--- a/src/html/detalles/detalles1.html
+++ b/src/html/detalles/detalles1.html
@@ -17,9 +17,9 @@
       </div>
       <nav>
         <ul class="dis-flex">
-          <li class="active">Categorias</li>
+          <li><a href="./categorias.html">Categorias</a></li>
           <li><a href="./presentacion.html">Presentación</a></li>
-          <li><a href="./enlaces.html">Enlaces</a></li>
+          <li  class="active">Enlaces</li>
         </ul>
       </nav>
     </div>
@@ -27,17 +27,11 @@
   <main>
     <section>
       <div class="container">
-        <h1>Categorias</h1>
+        <h1>Detalle1</h1>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias rem accusantium odit accusamus? Officiis ipsam sunt reiciendis, nihil exercitationem culpa voluptatem distinctio blanditiis molestias repudiandae, voluptatum ducimus. Suscipit, sunt eum.</p>
-        <section>
-          <h2>Categoria 1</h2>
-        </section>
-        <section>
-          <h2>Categoria 1</h2>
-        </section>
-        <section>
-          <h2>Categoria 1</h2>
-        </section>
+        <div class="dis-flex justify-space-between">
+
+        </div>
       </div>
     </section>
   </main>
