Created category page

--- a/src/html/categorias.html
+++ b/src/html/categorias.html
@@ -29,8 +29,55 @@
       <div class="container">
         <h1>Categorias</h1>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias rem accusantium odit accusamus? Officiis ipsam sunt reiciendis, nihil exercitationem culpa voluptatem distinctio blanditiis molestias repudiandae, voluptatum ducimus. Suscipit, sunt eum.</p>
-        <section>
+        <section class="entity-card-section">
           <h2>Categoria 1</h2>
+
+          <div class="dis-flex flex-wrap">
+            <div class="card-container">
+              <div class="card">
+                <img class="card__image" src="../static/statue-julius-caesar.jpg" alt="">
+                <div class="card__text">
+                  <h3 class="card__title">Detalle</h3>
+                  <p class="card__description">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quo, minima! Numquam, dolores. Officia harum quibusdam pariatur corrupti aperiam beatae officiis. Explicabo veniam possimus aliquid. Quidem soluta dolorem voluptatum at reprehenderit.</p>
+                </div>
+                <a class="right-card-button" href="./detalles/detalles1.html"><span>Saber más</span></a>
+              </div>
+            </div>
+            <div class="card-container">
+              <div class="card">
+                <img class="card__image" src="../static/statue-julius-caesar.jpg" alt="">
+                <div class="card__text">
+                  <h3 class="card__title">Detalle</h3>
+                  <p class="card__description">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quo, minima! Numquam, dolores. Officia harum quibusdam pariatur corrupti aperiam beatae officiis. Explicabo veniam possimus aliquid. Quidem soluta dolorem voluptatum at reprehenderit.</p>
+                </div>
+                <a class="right-card-button" href="./detalles/detalles1.html"><span>Saber más</span></a>
+              </div>
+            </div>
+
+            <div class="card-container">
+              <div class="card">
+                <img class="card__image" src="../static/statue-julius-caesar.jpg" alt="">
+                <div class="card__text">
+                  <h3 class="card__title">Detalle</h3>
+                  <p class="card__description">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quo, minima! Numquam, dolores. Officia harum quibusdam pariatur corrupti aperiam beatae officiis. Explicabo veniam possimus aliquid. Quidem soluta dolorem voluptatum at reprehenderit.</p>
+                </div>
+                <a class="right-card-button" href="./detalles/detalles1.html"><span>Saber más</span></a>
+              </div>
+            </div>
+
+            <div class="card-container">
+              <div class="card">
+                <img class="card__image" src="../static/statue-julius-caesar.jpg" alt="">
+                <div class="card__text">
+                  <h3 class="card__title">Detalle</h3>
+                  <p class="card__description">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quo, minima! Numquam, dolores. Officia harum quibusdam pariatur corrupti aperiam beatae officiis. Explicabo veniam possimus aliquid. Quidem soluta dolorem voluptatum at reprehenderit.</p>
+                </div>
+                <a class="right-card-button" href="./detalles/detalles1.html"><span>Saber más</span></a>
+              </div>
+            </div>
+
+          </div>
+          
         </section>
         <section>
           <h2>Categoria 1</h2>
