--- a/src/html/index.html
+++ b/src/html/index.html
@@ -58,8 +58,10 @@
     <section class="entity-card-section">
       <!--CARDS-->
       <div class="container dis-flex justify-space-around">
-        <div class="container-card">
-          <div class="card position-relative">
+
+        <div class="card-container">
+          <div class="card">
+            <img class="card__image" src="../static/statue-julius-caesar.jpg" alt="">
             <div class="card__text">
               <h2 class="card__title">Categorias</h2>
               <p class="card__description">Descubre más sobre la vida y gestas de uno de los hgombres más importantes de la antigua Roma, Julio César.</p>
@@ -67,8 +69,10 @@
             <a class="right-card-button" href="./categorias.html"><span>Ir a categorias</span></a>
           </div>
         </div>
-        <div class="container-card">
-          <div class="card position-relative">
+
+        <div class="card-container">
+          <div class="card">
+            <img class="card__image" src="../static/statue-julius-caesar.jpg" alt="">
             <div class="card__text">
               <h2 class="card__title">Presentación</h2>
               <p class="card__description">Conoce que hacemos y conoce quien fue Julio César.</p>
@@ -76,14 +80,17 @@
             <a class="right-card-button" href="./presentacion.html"><span>Ir a presentación</span></a>
           </div>
         </div>
-        <div class="container-card">
-          <div class="card position-relative">
+        
+        <div class="card-container">
+          <div class="card">
+            <img class="card__image" src="../static/statue-julius-caesar.jpg" alt="">
             <div class="card__text">
               <h2 class="card__title">Enlaces</h2>
               <p class="card__description">¿Quieres saber más? Lee las fuentes en las que se basa nuestro trabajo.</p>
             </div>
             <a class="right-card-button" href="./enlaces.html"><span>Ir a enlaces</span></a>
           </div>
+
         </div>
       </div>
     </section>
