--- a/src/html/detalles/detalles1.html
+++ b/src/html/detalles/detalles1.html
@@ -6,20 +6,20 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
 
-  <link rel="stylesheet" href="../css/styles.css" />
-  <script type="module" src="../js/app.js"></script>
+  <link rel="stylesheet" href="../../css/styles.css" />
+  <script type="module" src="../../js/app.js"></script>
 </head>
 <body>
   <header class="mb-50">
     <div class="container">
       <div>
-        <a href="index.html"><img class="logo" src="../static/logo.svg" alt="Logo"></a>
+        <a href="../index.html"><img class="logo" src="../../static/logo.svg" alt="Logo"></a>
       </div>
       <nav>
         <ul class="dis-flex">
-          <li><a href="./categorias.html">Categorias</a></li>
-          <li><a href="./presentacion.html">Presentación</a></li>
-          <li  class="active">Enlaces</li>
+          <li><a href="../categorias.html">Categorias</a></li>
+          <li><a href="../presentacion.html">Presentación</a></li>
+          <li><a href="../enlaces.html">Enlaces</a></li>
         </ul>
       </nav>
     </div>
