Added height for breakpoints for images

--- a/src/html/detalles/detalles1.html
+++ b/src/html/detalles/detalles1.html
@@ -25,7 +25,7 @@
     </div>
   </header>
   <main>
-    <section>
+    <article>
       <div class="container">
         <h1>Detalle1</h1>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias rem accusantium odit accusamus? Officiis ipsam sunt reiciendis, nihil exercitationem culpa voluptatem distinctio blanditiis molestias repudiandae, voluptatum ducimus. Suscipit, sunt eum.</p>
@@ -33,7 +33,7 @@
 
         </div>
       </div>
-    </section>
+    </article>
   </main>
   <footer>
     <div class="container">
