--- a/src/html/enlaces.html
+++ b/src/html/enlaces.html
@@ -4,10 +4,11 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Enlaces</title>
 
   <link rel="stylesheet" href="../css/styles.css" />
   <script type="module" src="../js/app.js"></script>
+  <link rel="icon" href="../static/logo.svg" type="image/x-icon" />
 </head>
 <body>
   <header class="mb-50">
@@ -33,14 +34,34 @@
           <section class="entity-subsection">
             <h2>Fuentes externas de información</h2>
             <ul>
-              <li><span><a href="https://unsplash.com/photos/Y_v45vAfBEc">Estatua de Julio Caesar Augusto</a> por Nemanja Peric.</span></li>
+              <li><span><a href="https://es.wikipedia.org/wiki/Julio_C%C3%A9sar">Julio César</a>, información extraida de la Wikipedia la enciclopedia libre.</span></li>
             </ul>
           </section>
           <section class="entity-subsection">
             <h2>Directorio de imágenes</h2>
-            <ul>
-              <li><span><a href="https://unsplash.com/photos/Y_v45vAfBEc">Estatua de Julio Caesar Augusto</a> por Nemanja Peric.</span></li>
-            </ul>
+            <div>
+              <h3>Imagenes de Unsplash</h3>
+              <p>Imagenes extraidas de la página de <a href="https://unsplash.com/">Unsplash</a>.
+                Todas las imagenes se pueden utilizar bajo la <a href="https://unsplash.com/license">licencia Unspash</a> la cual permite descargar y utilizarlas gratuitamente
+                incluso para uso comercial y no comercial sin permiso a no ser que se hagan uso de estas para venderlas o crear un servicio similar a Unspash.
+             </p>
+             <ul>
+               <li><span><a href="https://unsplash.com/photos/Y_v45vAfBEc">Estatua de Julio Caesar Augusto</a> por Nemanja Peric.</span></li>
+               <li><span><a href="https://unsplash.com/photos/UHFh9dJ9w58">Arboles verdes y campo de hierba verde durante el día</a> por Adriano Pucciarelli.</span></li>
+               <li><span><a href="https://unsplash.com/photos/ckotRXopwRM">Foto aerea del colíseo romano en Roma</a> por Spencer Davis.</span></li>
+               <li><span><a href="https://unsplash.com/photos/hSliLYLmm-c">Retrato del busto de bronce de Julio César</a> por Ilona Frey.</span></li>
+             </ul>
+            </div>
+
+            <div>
+              <h3>Imagenes de Wikimedia Commons</h3>
+              <p>Imagenes extraidas de la página de <a href="https://commons.wikimedia.org/wiki/Main_Page">Wikimedia Commons</a>.
+                Todas las imagenes utilizadas han sido bajo su respectiva licencia recogida en la página de Wikimedia Commons.
+             </p>
+             <ul>
+               <li><span>File:<a href="https://commons.wikimedia.org/wiki/File:SPQR.svg">SPQR.svg</a> por Amadscientist (Mark Miller). Imagen en el dominio publico.</span></li>
+             </ul>
+            </div>
           </section>
         </div>
       </div>
