--- a/src/html/index.html
+++ b/src/html/index.html
@@ -4,10 +4,11 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Página de inicio</title>
 
   <link rel="stylesheet" href="../css/styles.css" />
   <script type="module" src="../js/app.js"></script>
+  <link rel="icon" href="../static/logo.svg" type="image/x-icon" />
 </head>
 <body>
   <header>
@@ -43,16 +44,16 @@
         </div>
         <figcaption class="container"><div><h1 class="container">Conoce a Julio César, creador del poderoso Imperio Romano</h1></figcaption>
       </figure> -->
-    </section>
+    <!-- </section> -->
 
     <section class="entity-index-presentation-section">
       <div class="container">
         <h1>Portal biográfico: Julio César</h1>
         <p>Bienvenido al portal biográfico sobre Julio César (Gaius Julius Caesar) general y politico romano, además de ser consul y el primer dictador Romano vitalicio (dictator perpetuo). En este lugar podras conocer
-          algunas de sus gestas más famosas y como vivio uno de los hombres más importantes del mundo antiguo. Miembro del Primer <span id="dots"">...</span><span id="read-more"> Triumvirato, general de campañas militares
+          algunas de sus gestas más famosas y como vivio uno de los hombres más importantes del mundo antiguo. Miembro del Primer <span id="dots">...</span><span id="read-more"> Triumvirato, general de campañas militares
           como la conquista de la Galia y la guerra civil romana que llevo a César a ser el artificie final de la muerte de la república romana y posterior auge de un imperio.</span> 
         </p>
-        <button id="read-more-button">Leer más</button><i id="rm-icon" class="not-active"></i>
+        <button id="read-more-button" >Leer más</button><i id="rm-icon" class="not-active"></i>
       </div>
     </section>
     <section class="entity-card-section">
@@ -61,10 +62,10 @@
 
         <div class="card-container">
           <div class="card">
-            <img class="card__image" src="../static/statue-julius-caesar.jpg" alt="">
+            <img class="card__image" src="../static/card-image/ancient-rome.jpg" alt="Vista aerea del coliseo romano">
             <div class="card__text">
               <h2 class="card__title">Categorias</h2>
-              <p class="card__description">Descubre más sobre la vida y gestas de uno de los hgombres más importantes de la antigua Roma, Julio César.</p>
+              <p class="card__description">Descubre más sobre la vida y gestas de uno de los gombres más importantes de la antigua Roma, Julio César.</p>
             </div>
             <a class="right-card-button" href="./categorias.html"><span>Ir a categorias</span></a>
           </div>
@@ -72,7 +73,7 @@
 
         <div class="card-container">
           <div class="card">
-            <img class="card__image" src="../static/statue-julius-caesar.jpg" alt="">
+            <img class="card__image" src="../static/card-image/julius-caesar-bronze-statue.jpg" alt="Estatu de bronze de Julio César">
             <div class="card__text">
               <h2 class="card__title">Presentación</h2>
               <p class="card__description">Conoce que hacemos y conoce quien fue Julio César.</p>
@@ -83,7 +84,7 @@
         
         <div class="card-container">
           <div class="card">
-            <img class="card__image" src="../static/statue-julius-caesar.jpg" alt="">
+            <img class="card__image" src="../static/card-image/roman-road.jpg" alt="Carretera romana">
             <div class="card__text">
               <h2 class="card__title">Enlaces</h2>
               <p class="card__description">¿Quieres saber más? Lee las fuentes en las que se basa nuestro trabajo.</p>
