--- a/src/html/presentacion.html
+++ b/src/html/presentacion.html
@@ -4,10 +4,11 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Presentación</title>
 
   <link rel="stylesheet" href="../css/styles.css" />
   <script type="module" src="../js/app.js"></script>
+  <link rel="icon" href="../static/logo.svg" type="image/x-icon" />
 </head>
 <body>
   <header class="mb-50">
@@ -28,17 +29,24 @@
     <section class="entity-presentation-section">
       <div class="container">
         <h1>Sobre nosotros y Julio César</h1>
+          <p>Bienvenido al portal biográfico sobre <strong>Julio César (Gaius Julius Caesar)</strong>, general militar, consul y político romano del siglo I a.c. En este lugar se explicaran detalles 
+            sobre la vida y los logros de posiblemente uno de los
+            más grandes hombres de la antiguedad. Hombre artificie del auge de un imperio y que puso de manifiesto que la República Romana era un ente ya moribundo y corrupto destinado a perecer,
+            gracias a aprovecharse de todos los puntos ciegos y mecanismos de esta. Lo cual le permitio convertirse en el primer dictador Romano vitalicio (dictator perpetuo).
+          </p>
+          <p>
+            Aqui podrás conocer de primera mano toda su vida y trayectoria, desde su ascenso político, a como formo el primer triunvirato, sus futuras ambiciones y su asesinato. No sin antes pasar por
+            las campañas militares en las que participo, como la guerra de las Galias, las batallas que libro y la crisis política
+            que desencadeno en una guerra civil contra uno de los miembros del triunvirato.
+          </p>
           <figure>
             <img class="image-height" src="../static/julius-caesar.jpg" alt="Perfil de bronce de Julio César">
             <figcaption><span>Estatua de bronce desgastado sobre Julio César.</span></figcaption>
           </figure>
-          <p>Bienvenido al portal biográfico sobre <strong>Julio César</strong>. En este lugar se explicaran detalles sobre la vida y los logros de posiblemente uno de los
-            más grandes hombres de la antiguedad. Todo el trabajo realizado en este portal ha sido extraido de fuentes externas y ha sido sintetizado de forma
-            que ayude al lector a conocer más sobre él.</p>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. In rerum officiis, architecto dolores adipisci sed quaerat quo nemo perspiciatis modi distinctio aspernatur veritatis qui quia quas dolor accusantium? Expedita, non?
+          <p>Todo el trabajo realizado en este portal ha sido extraido de fuentes externas y ha sido sintetizado de forma
+            que ayude al lector a conocer más sobre él. Si quieres profundizar y saber más, en este lugar podras encontrar <a href="./enlaces.html">enlaces</a> a todas las fuentes en las que se ha 
+            basado nuestro trabajo.
           </p>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt eveniet eos voluptatibus aperiam perspiciatis veritatis deleniti, fugit doloremque. Fugit aperiam vero eius non quia sit quas ad autem eum quo.</p>
       </div>
     </section>
   </main>
