--- a/src/html/categorias.html
+++ b/src/html/categorias.html
@@ -4,10 +4,11 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Categorias</title>
 
   <link rel="stylesheet" href="../css/styles.css" />
   <script type="module" src="../js/app.js"></script>
+  <link rel="icon" href="../static/logo.svg" type="image/x-icon" />
 </head>
 <body>
   <header class="mb-50">
