fixed close section

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -44,7 +44,7 @@
         </div>
         <figcaption class="container"><div><h1 class="container">Conoce a Julio César, creador del poderoso Imperio Romano</h1></figcaption>
       </figure> -->
-    <!-- </section> -->
+    </section>
 
     <section class="entity-index-presentation-section">
       <div class="container">
